Move loading the accels file in app::startup

Bug https://bugzilla.gnome.org/show_bug.cgi?id=723626
Patch by nixahn@gmail.com